[gd_scene load_steps=9 format=2]

[ext_resource path="res://Characters/Enemy/EnemySample/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Characters/Enemy/EnemySample/Area.gd" type="Script" id=2]
[ext_resource path="res://Characters/Enemy/EnemySample/area_closeAttack.gd" type="Script" id=3]
[ext_resource path="res://Characters/Enemy/EnemySample/Enemy1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/Enemy/EnemySample/AnimationPlayer.gd" type="Script" id=5]

[sub_resource type="CylinderShape" id=1]
radius = 0.276932
height = 1.58652

[sub_resource type="CylinderShape" id=2]
radius = 1.78514
height = 2.30829

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 1, 0.498959 )

[node name="Enemy" type="KinematicBody"]
transform = Transform( -1, 0, 8.74228e-008, 0, 1, 0, -8.74228e-008, 0, -1, 0, 0, 0 )
collision_layer = 1024
collision_mask = 33
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.845573, 0 )
shape = SubResource( 1 )

[node name="area_closeDetect" type="Area" parent="."]
collision_layer = 2048
collision_mask = 32
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="area_closeDetect"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06041, 0 )
shape = SubResource( 2 )

[node name="area_closeAttack" type="Area" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="area_closeAttack"]
transform = Transform( 0.329701, 0, 1.21456e-007, 0, 0.256316, 0, 1.21456e-007, 0, 1.719, 9.93943e-008, 1.11628, 1.13694 )
shape = SubResource( 3 )

[node name="timer_firstDelay" type="Timer" parent="."]

[node name="timer_closeAttack" type="Timer" parent="."]

[node name="Scene Root" parent="." instance=ExtResource( 4 )]

[node name="AnimationPlayer" parent="Scene Root" index="1"]
script = ExtResource( 5 )
[connection signal="body_entered" from="area_closeDetect" to="." method="_on_area_closeDetect_body_entered"]
[connection signal="body_entered" from="area_closeAttack" to="area_closeAttack" method="_on_area_closeAttack_body_entered"]

[editable path="Scene Root"]
